--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -86,6 +86,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.7.0",
     "eslint-plugin-react": "^7.11.1",
+    "flow-bin": "^0.87.0",
     "husky": "^1.1.2",
     "jest": "23.6.0",
     "lint-staged": "^7.3.0",
