--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -40,6 +40,7 @@
     "react": "16.6.1",
     "react-native": "0.57.5",
     "react-native-camera": "^1.4.1",
+    "react-native-config": "^0.11.7",
     "react-native-crypto": "^2.1.2",
     "react-native-fs": "^2.12.1",
     "react-native-image-picker": "^0.27.2",
