--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -36,7 +36,7 @@
     "punycode": "^1.2.4",
     "qrcode": "^1.3.0",
     "querystring-es3": "~0.2.0",
-    "ramda": "^0.25.0",
+    "ramda": "^0.26.1",
     "react": "16.6.1",
     "react-native": "0.57.5",
     "react-native-camera": "^1.4.1",
@@ -72,7 +72,8 @@
     "url": "~0.10.1",
     "util": "~0.10.3",
     "uuid": "^3.3.2",
-    "vm-browserify": "0.0.4"
+    "vm-browserify": "0.0.4",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
