--- a/BrightID/.eslintrc
+++ b/BrightID/.eslintrc
@@ -46,6 +46,7 @@
     "no-param-reassign": "off",
     "no-var": "off",
     "vars-on-top": "off",
-    "block-scoped-var": "off"
+    "block-scoped-var": "off",
+    "flowtype/space-after-type-colon": "off"
   }
 }
