--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -35,12 +35,12 @@
     "process": "^0.11.0",
     "prop-types": "^15.6.2",
     "punycode": "^1.2.4",
-    "qrcode": "^1.3.0",
+    "qrcode": "^1.3.2",
     "querystring-es3": "~0.2.0",
     "ramda": "^0.26.1",
-    "react": "16.6.1",
-    "react-native": "0.57.5",
-    "react-native-camera": "^1.4.1",
+    "react": "16.6.3",
+    "react-native": "0.57.8",
+    "react-native-camera": "^1.6.3",
     "react-native-config": "^0.11.7",
     "react-native-crypto": "^2.1.2",
     "react-native-fs": "^2.12.1",
@@ -79,23 +79,24 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.0.0",
+    "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.7.0",
     "eslint-plugin-react": "^7.11.1",
     "flow-bin": "^0.87.0",
-    "husky": "^1.1.2",
+    "husky": "^1.2.1",
     "jest": "23.6.0",
     "lint-staged": "^7.3.0",
     "metro-react-native-babel-preset": "0.49.0",
-    "prettier": "^1.15.2",
-    "react-test-renderer": "16.6.1",
+    "prettier": "^1.15.3",
+    "react-test-renderer": "16.6.3",
     "rn-nodeify": "tradle/rn-nodeify"
   },
   "jest": {
