--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -99,7 +99,13 @@
     "rn-nodeify": "tradle/rn-nodeify"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.(js)$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    },
+    "globals": {
+      "window": {}
+    }
   },
   "react-native": {
     "zlib": "browserify-zlib",
