partially through updating groups

--- a/BrightID/.babelrc
+++ b/BrightID/.babelrc
@@ -1,4 +1,6 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"],
-  "plugins": ["transform-inline-environment-variables"]
+  "presets": [
+    "module:metro-react-native-babel-preset",
+    "module:react-native-dotenv"
+  ]
 }
