--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -43,6 +43,7 @@
     "react-native-camera": "^1.6.3",
     "react-native-config": "^0.11.7",
     "react-native-crypto": "^2.1.2",
+    "react-native-dotenv": "^0.2.0",
     "react-native-fs": "^2.12.1",
     "react-native-image-picker": "^0.27.2",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
