--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -166,6 +166,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-selection-menu')
     compile project(':react-native-image-picker')
     compile project(':react-native-fs')
     compile project(':rn-fetch-blob')
