--- a/BrightID/android/settings.gradle
+++ b/BrightID/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'BrightID'
+include ':react-native-selection-menu'
+project(':react-native-selection-menu').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-selection-menu/android')
 include ':react-native-image-picker'
 project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 include ':react-native-fs'
