--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -48,6 +48,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-level-fs": "^3.0.0",
     "react-native-linear-gradient": "^2.5.3",
+    "react-native-modal-overlay": "^1.3.1",
     "react-native-os": "^1.0.1",
     "react-native-randombytes": "^3.5.1",
     "react-native-selection-menu": "^0.0.1",
