--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -20,6 +20,7 @@
     "@tradle/react-native-http": "^2.0.0",
     "apisauce": "^1.0.1",
     "assert": "^1.1.1",
+    "base64-js": "^1.3.0",
     "browserify-zlib": "~0.1.4",
     "buffer": "^5.2.1",
     "console-browserify": "^1.1.0",
