--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -115,8 +115,8 @@ android {
         applicationId "org.brightid"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.15"
+        versionCode 2
+        versionName "1.0-beta2"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
