--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -51,6 +51,7 @@
     "react-native-linear-gradient": "^2.5.3",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-os": "^1.0.1",
+    "react-native-popup-menu": "^0.14.2",
     "react-native-randombytes": "^3.5.1",
     "react-native-selection-menu": "^0.0.1",
     "react-native-snap-carousel": "^3.7.5",
