--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -63,7 +63,7 @@
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.2",
     "react-navigation-header-buttons": "^2.1.0",
-    "react-redux": "^5.1.1",
+    "react-redux": "^6.0.1",
     "readable-stream": "1.0.33",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
@@ -84,24 +84,25 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "eslint": "^5.10.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-flowtype": "^3.4.2",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.2",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^2.7.0",
-    "eslint-plugin-react": "^7.11.1",
-    "flow-bin": "^0.87.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "flow-bin": "^0.95.1",
     "husky": "^1.2.1",
     "jest": "23.6.0",
     "lint-staged": "^7.3.0",
     "metro-react-native-babel-preset": "0.49.0",
     "prettier": "^1.15.3",
     "react-test-renderer": "16.6.3",
-    "rn-nodeify": "tradle/rn-nodeify"
+    "resolve": "1.8.1",
+    "rn-nodeify": "10.0.1"
   },
   "jest": {
     "preset": "react-native",
