Upgrade react-navigation to v3 and use `createAppContainer` to allow for deep links. Refs #280

--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -166,6 +166,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-gesture-handler')
     compile project(':react-native-image-picker')
     compile project(':react-native-fs')
     compile project(':rn-fetch-blob')
