--- a/BrightID/ios/Podfile
+++ b/BrightID/ios/Podfile
@@ -38,6 +38,8 @@ target 'BrightID' do
   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
+
 end
 
 # very important to have, unless you removed React dependencies for Libraries 
