--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -45,6 +45,7 @@
     "react-native-crypto": "^2.1.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-fs": "^2.12.1",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.27.2",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-level-fs": "^3.0.0",
@@ -61,7 +62,7 @@
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "^2.1.0",
     "react-native-vector-icons": "^6.0.2",
-    "react-navigation": "^2.18.2",
+    "react-navigation": "^3.11.0",
     "react-navigation-header-buttons": "^2.1.0",
     "react-redux": "^6.0.1",
     "readable-stream": "1.0.33",
