--- a/BrightID/android/app/src/main/AndroidManifest.xml
+++ b/BrightID/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 >
 
   <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
   <uses-permission android:name="android.permission.CAMERA"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <application
@@ -12,9 +11,12 @@
     android:name=".MainApplication"
     android:label="@string/app_name"
     android:icon="@mipmap/ic_launcher"
+    android:roundIcon="@mipmap/ic_launcher_round"
     android:allowBackup="false"
     android:theme="@style/AppTheme"
-    android:windowSoftInputMode="adjustResize">
+    android:windowSoftInputMode="adjustResize"
+    android:usesCleartextTraffic="true"
+  >
 
     <activity
       android:name=".MainActivity"
