--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -2,11 +2,10 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "27.0.3"
         minSdkVersion = 16
-        compileSdkVersion = 27
-        targetSdkVersion = 26
-        supportLibVersion = "27.1.1"
+        compileSdkVersion = 28
+        targetSdkVersion = 28
+        supportLibVersion = "28.0.0"
     }
     repositories {
         google()
@@ -15,7 +14,7 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath("com.android.tools.build:gradle:3.4.1")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,22 +23,18 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         mavenLocal()
-        jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
+            url("$rootDir/../node_modules/react-native/android")
         }
-        maven { url "https://maven.google.com" }
-        maven { url "https://jitpack.io" }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        google()
+        jcenter()
     }
-}
-
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.6'
-    distributionUrl = distributionUrl.replace("bin", "all")
 }
 
 subprojects { subproject ->
@@ -47,7 +42,6 @@ subprojects { subproject ->
         if((subproject.plugins.hasPlugin('android') || subproject.plugins.hasPlugin('android-library'))) {
             android {
                 compileSdkVersion rootProject.ext.compileSdkVersion
-                buildToolsVersion rootProject.ext.buildToolsVersion
             }
         }
     }
