--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -10,16 +10,18 @@
   "scripts": {
     "fix": "rn-nodeify --hack",
     "postinstall": "rn-nodeify --hack",
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start": "react-native start",
     "test": "jest",
+    "lint": "eslint .",
     "test:watch": "npm test -- --watch",
     "updateSnap": "jest --updateSnapshot",
     "build:release": "android/gradlew assembleRelease"
   },
   "dependencies": {
     "@tradle/react-native-http": "^2.0.0",
-    "apisauce": "^1.0.1",
+    "apisauce": "^1.0.3",
     "assert": "^1.1.1",
+    "asyncstorage-down": "^4.2.0",
     "base64-js": "^1.3.0",
     "browserify-zlib": "~0.1.4",
     "buffer": "^5.2.1",
@@ -39,36 +41,34 @@
     "qrcode": "^1.3.2",
     "querystring-es3": "~0.2.0",
     "ramda": "^0.26.1",
-    "react": "16.6.3",
-    "react-native": "0.57.8",
-    "react-native-camera": "^1.6.3",
+    "react": "16.8.6",
+    "react-native": "0.60.4",
+    "react-native-camera": "^3.0.1",
     "react-native-crypto": "^2.1.2",
-    "react-native-dotenv": "^0.2.0",
     "react-native-fs": "^2.12.1",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^0.27.2",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
-    "react-native-level-fs": "^3.0.0",
-    "react-native-linear-gradient": "^2.5.3",
+    "react-native-level-fs": "^3.0.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-os": "^1.0.1",
     "react-native-popup-menu": "^0.14.2",
     "react-native-randombytes": "^3.5.1",
-    "react-native-selection-menu": "^0.0.1",
-    "react-native-snap-carousel": "^3.7.5",
-    "react-native-spinkit": "^1.1.1",
+    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-snap-carousel": "^3.8.0",
+    "react-native-spinkit": "^1.4.1",
     "react-native-status-bar-height": "^2.1.0",
-    "react-native-svg": "^8.0.10",
+    "react-native-svg": "^9.6.2",
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "^2.1.0",
-    "react-native-vector-icons": "^6.0.2",
-    "react-navigation": "^3.11.0",
-    "react-navigation-header-buttons": "^2.1.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.11.1",
+    "react-navigation-header-buttons": "^3.0.1",
     "react-redux": "^6.0.1",
-    "readable-stream": "1.0.33",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "rn-fetch-blob": "^0.10.13",
+    "rn-fetch-blob": "^0.10.16",
     "socket.io-client": "^2.2.0",
     "stream-browserify": "^1.0.0",
     "string_decoder": "~0.10.25",
@@ -82,28 +82,31 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "23.6.0",
+    "@babel/core": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-eslint": "^10.0.2",
+    "babel-jest": "24.8.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^3.4.2",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.1.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "flow-bin": "^0.95.1",
-    "husky": "^1.2.1",
-    "jest": "23.6.0",
-    "lint-staged": "^7.3.0",
-    "metro-react-native-babel-preset": "0.49.0",
-    "prettier": "^1.15.3",
-    "react-test-renderer": "16.6.3",
-    "resolve": "1.8.1",
-    "rn-nodeify": "10.0.1"
+    "eslint-plugin-flowtype": "^3.13.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.14.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "flow-bin": "^0.104.0",
+    "husky": "^3.0.2",
+    "jest": "24.8.0",
+    "lint-staged": "^9.2.1",
+    "metro-react-native-babel-preset": "^0.55.0",
+    "prettier": "^1.18.2",
+    "react-test-renderer": "16.8.6",
+    "resolve": "^1.12.0",
+    "rn-nodeify": "^10.0.1"
   },
   "jest": {
     "preset": "react-native",
