--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -18,6 +18,7 @@
     "build:release": "android/gradlew assembleRelease"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.7.0",
     "@tradle/react-native-http": "^2.0.0",
     "apisauce": "^1.0.3",
     "assert": "^1.1.1",
@@ -96,11 +97,11 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.14.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "flow-bin": "^0.104.0",
     "husky": "^3.0.2",
-    "jest": "24.8.0",
+    "jest": "^24.9.0",
     "lint-staged": "^9.2.1",
     "metro-react-native-babel-preset": "^0.55.0",
     "prettier": "^1.18.2",
