update bootstrap and testing

--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -116,7 +116,10 @@
     },
     "globals": {
       "window": {}
-    }
+    },
+    "setupFiles": [
+      "./jestSetupFile.js"
+    ]
   },
   "react-native": {
     "zlib": "browserify-zlib",
