--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -31,6 +31,8 @@
     "dns.js": "^1.0.1",
     "domain-browser": "^1.1.1",
     "emittery": "^0.4.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "events": "^1.0.0",
     "https-browserify": "~0.0.0",
     "moment": "^2.22.2",
@@ -43,6 +45,7 @@
     "querystring-es3": "~0.2.0",
     "ramda": "^0.26.1",
     "react": "16.8.6",
+    "react-dom": "16.8.6",
     "react-native": "0.60.4",
     "react-native-camera": "^3.0.1",
     "react-native-crypto": "^2.1.2",
@@ -106,6 +109,7 @@
     "metro-react-native-babel-preset": "^0.55.0",
     "prettier": "^1.18.2",
     "react-test-renderer": "16.8.6",
+    "redux-mock-store": "^1.5.4",
     "resolve": "^1.12.0",
     "rn-nodeify": "^10.0.1"
   },
@@ -118,7 +122,11 @@
       "window": {}
     },
     "setupFiles": [
-      "./jestSetupFile.js"
+      "./jestSetupFile.js",
+      "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-community/async-storage|react-native-gesture-handler|react-native-popup-menu|react-navigation-header-buttons|react-native-platform-touchable|react-native-linear-gradient|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-snap-carousel|react-native-image-picker|react-native-svg|react-native-camera)/)"
     ]
   },
   "react-native": {
