--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -208,6 +208,9 @@ dependencies {
     implementation project(':@react-native-community_async-storage')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    // for react-navigation
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
 
     if (enableHermes) {
       def hermesPath = "../../node_modules/hermesvm/android/";
