--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.0",
+    "@react-native-community/masked-view": "^0.1.5",
     "@tradle/react-native-http": "^2.0.0",
     "apisauce": "^1.0.3",
     "assert": "^1.1.1",
@@ -50,7 +51,7 @@
     "react-native-camera": "^3.0.1",
     "react-native-crypto": "^2.1.2",
     "react-native-fs": "^2.12.1",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-native-gesture-handler": "^1.5.3",
     "react-native-image-picker": "^0.27.2",
     "react-native-keyboard-aware-scroll-view": "^0.7.4",
     "react-native-level-fs": "^3.0.1",
@@ -59,7 +60,9 @@
     "react-native-os": "^1.0.1",
     "react-native-popup-menu": "^0.14.2",
     "react-native-randombytes": "^3.5.1",
-    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-reanimated": "^1.4.0",
+    "react-native-safe-area-context": "^0.6.2",
+    "react-native-screens": "^2.0.0-alpha.22",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-spinkit": "^1.4.1",
     "react-native-status-bar-height": "^2.1.0",
@@ -67,8 +70,10 @@
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "^2.1.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.11.1",
+    "react-navigation": "^4.0.10",
+    "react-navigation-animated-switch": "^0.4.1",
     "react-navigation-header-buttons": "^3.0.1",
+    "react-navigation-stack": "^2.0.12",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
