--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -32,6 +32,7 @@
     "enzyme-adapter-react-16": "^1.15.1",
     "events": "^1.0.0",
     "https-browserify": "~0.0.0",
+    "husky": "^4.2.1",
     "moment": "^2.22.2",
     "path-browserify": "0.0.0",
     "pokemon": "^1.2.3",
