upgrade react-navigation

--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -145,6 +145,7 @@ android {
         applicationId "org.brightid"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        multiDexEnabled true
         missingDimensionStrategy 'react-native-camera', 'mlkit'
         versionCode 5
         versionName "2.0"
@@ -204,6 +205,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.android.support:multidex:1.0.3'
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
