--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.0",
+    "@react-native-community/masked-view": "^0.1.6",
     "@tradle/react-native-http": "^2.0.0",
     "apisauce": "^1.1.1",
     "assert": "^1.1.1",
@@ -57,7 +58,9 @@
     "react-native-os": "^1.0.1",
     "react-native-popup-menu": "^0.15.6",
     "react-native-randombytes": "^3.5.3",
-    "react-native-screens": "^1.0.0-alpha.23",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-safe-area-context": "^0.6.2",
+    "react-native-screens": "^2.0.0-alpha.29",
     "react-native-snap-carousel": "^3.8.4",
     "react-native-spinkit": "^1.5.0",
     "react-native-status-bar-height": "^2.4.0",
@@ -65,8 +68,9 @@
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "^3.0.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.11.1",
+    "react-navigation": "^4.0.10",
     "react-navigation-header-buttons": "^3.0.1",
+    "react-navigation-stack": "^2.0.16",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
