--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -46,7 +46,7 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-aes-crypto": "^1.3.6",
+    "react-native-aes-crypto": "^https://github.com/BrightID/react-native-aes",
     "react-native-camera": "^3.15.1",
     "react-native-crypto": "^2.2.0",
     "react-native-fs": "^2.16.2",
@@ -82,7 +82,7 @@
     "timers": "^0.1.1",
     "timers-browserify": "^1.0.1",
     "tty-browserify": "0.0.0",
-    "tweetnacl": "https://github.com/BrightID/tweetnacl-js",
+    "tweetnacl": "https://github.com/RnbWd/tweetnacl-native",
     "url": "~0.10.1",
     "util": "~0.10.3",
     "uuid": "^3.3.2",
