--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -46,7 +46,7 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-aes-crypto": "^https://github.com/BrightID/react-native-aes",
+    "react-native-aes-crypto": "https://github.com/BrightID/react-native-aes",
     "react-native-camera": "^3.15.1",
     "react-native-crypto": "^2.2.0",
     "react-native-fs": "^2.16.2",
