--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -46,6 +46,7 @@
     "react-native-status-bar-height": "^2.4.0",
     "react-native-svg": "^11.0.1",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-view-shot": "^3.1.2",
     "react-navigation": "^4.0.10",
     "react-navigation-animated-switch": "^0.4.1",
     "react-navigation-stack": "^2.0.16",
