--- a/BrightID/android/app/src/debug/AndroidManifest.xml
+++ b/BrightID/android/app/src/debug/AndroidManifest.xml
@@ -3,6 +3,8 @@
           xmlns:tools="http://schemas.android.com/tools">
 
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+  <uses-permission android:name="android.permission.CAMERA" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
   <application tools:targetApi="28" tools:ignore="GoogleAppIndexingWarning" android:usesCleartextTraffic="true" />
 </manifest>
