switch photo picker library

--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -33,6 +33,8 @@ allprojects {
         }
         google()
         jcenter()
+        maven { url 'https://maven.google.com' }
+        maven { url "https://www.jitpack.io" }
     }
 }
 
