Revert "add url scheme in ios"
This reverts commit 3f64325c00b5913ed635d03394609fc0b9473b2a.

--- a/BrightID/ios/BrightID/Info.plist
+++ b/BrightID/ios/BrightID/Info.plist
@@ -20,19 +20,6 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>org.brightid.demo</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>brightid</string>
-			</array>
-		</dict>
-	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -45,7 +32,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) would like to use your camera</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMainNibFile</key>
 	<string>LaunchScreenBrightID</string>
 	<key>NSMainNibFile~ipad</key>
