--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -137,8 +137,8 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         missingDimensionStrategy 'react-native-camera', 'general'
-        versionCode 6
-        versionName "1.0-beta6"
+        versionCode 7
+        versionName "2.4"
         multiDexEnabled true
     }
     signingConfigs {
