--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,12 @@ android/keystores/debug.keystore
 # VSCODE
 .vscode
 
-
+BrightID/ios/Pods/
+BrightID/ios/Pods/Target Support Files/Pods-BrightID/
+BrightID/ios/Pods/Target Support Files/Pods-BrightID/
+BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID-acknowledgements.markdown
+BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID-acknowledgements.plist
+BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.debug.xcconfig
+BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.release.xcconfig
+BrightID/ios/Pods/Pods.xcodeproj/project.pbxproj
+BrightID/ios/Pods/Manifest.lock
