--- a/BrightID/.gitignore
+++ b/BrightID/.gitignore
@@ -69,3 +69,16 @@ node
 husky@*
 core-js@*
 /artifacts/
+google-services.json
+*-google-services.json
+Podfile.lock
+
+ios/Pods/
+ios/Pods/Target Support Files/Pods-BrightID/
+ios/Pods/Target Support Files/Pods-BrightID/
+ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID-acknowledgements.markdown
+ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID-acknowledgements.plist
+ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.debug.xcconfig
+ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.release.xcconfig
+ios/Pods/Pods.xcodeproj/project.pbxproj
+ios/Pods/Manifest.lock
