--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,10 @@ android/keystores/debug.keystore
 # VSCODE
 .vscode
 
-
+BrightID/ios/Pods/
+BrightID/ios/Podfile.lock
+BrightID/ios/Pods/Pods.xcodeproj/project.pbxproj
+BrightID/ios/Pods/Manifest.lock
+BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.release.xcconfig
+BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.debug.xcconfig
+BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID-acknowledgements.markdown
