add deep link test / ios fonts

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ BrightID/ios/Pods/Manifest.lock
 BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.release.xcconfig
 BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.debug.xcconfig
 BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID-acknowledgements.markdown
+BrightID/yarn.lock
