--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -91,6 +91,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
+    "flow-bin": "0.113.0",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.2",
     "metro-react-native-babel-preset": "^0.58.0",
@@ -137,6 +138,14 @@
       "ios.sim.debug": {
         "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/BrightID.app",
         "build": "xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "type": "ios.simulator",
+        "device": {
+          "type": "iPhone 11 Pro Max"
+        }
+      },
+      "ios.sim.release": {
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/BrightID.app",
+        "build": "xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -configuration Release -sdk iphonesimulator -derivedDataPath ios/build",
         "type": "ios.simulator",
         "device": {
           "type": "iPhone 11 Pro Max"
