--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -133,6 +133,14 @@ if (keystorePropertiesFile.exists()){
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
+    // Fix "java.lang.UnsatisfiedLinkError: couldn't find DSO to load: libhermes.so" in release builds
+    // Found at https://github.com/facebook/react-native/issues/25923#issuecomment-626663209
+    configurations.all {
+      resolutionStrategy {
+        force "com.facebook.soloader:soloader:0.8.2"
+      }
+    }
+
     defaultConfig {
         applicationId "org.brightid"
         minSdkVersion rootProject.ext.minSdkVersion
