add mock for react-native-keychain.js

--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -120,7 +120,7 @@
       "./node_modules/react-native-gesture-handler/jestSetup.js"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-community/async-storage|react-native-gesture-handler|react-native-popup-menu|react-native-platform-touchable|react-native-linear-gradient|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-snap-carousel|react-native-image-picker|react-native-svg|react-native-camera|react-native-image-crop-picker)/)"
+      "node_modules/(?!(react-native|react-navigation|@react-navigation/.*|react-navigation-stack|react-native-screens|@react-native-community/async-storage|react-native-gesture-handler|react-native-popup-menu|react-native-platform-touchable|react-native-linear-gradient|react-native-vector-icons|react-native-spinkit|react-native-status-bar-height|react-native-snap-carousel|react-native-image-picker|react-native-svg|react-native-camera|react-native-image-crop-picker|react-native-keychain)/)"
     ]
   },
   "detox": {
