bug fixes after commit

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID.debug.xcconfi
 BrightID/ios/Pods/Target Support Files/Pods-BrightID/Pods-BrightID-acknowledgements.markdown
 BrightID/yarn.lock
 /BrightID/flow-typed/npm/
+BrightID/yarn.lock
